--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+nav {
+    @apply bg-gray-800 p-4;
+  }
+  ul {
+    @apply flex space-x-4;
+  }
+  li {
+    @apply text-white;
+  }
+  a {
+    @apply text-blue-400;
+    &:hover {
+      @apply text-blue-200;
+    }
+  }
