--- a/src/app/add-contact/add-contact.component.html
+++ b/src/app/add-contact/add-contact.component.html
@@ -1,6 +1,6 @@
-<div class="container mx-auto p-6 bg-gray-100 min-h-screen flex items-center justify-center">
+<div class="container mx-auto  md:bg-gray-100 min-h-screen flex items-center justify-center">
   <div class="w-full max-w-lg bg-white shadow-md rounded-lg p-6">
-    <h2 class="text-2xl font-semibold mb-4 text-gray-800">Login Form</h2>
+    <h2 class="text-2xl font-semibold mb-4 text-gray-800">Contact Form</h2>
     
     <form [formGroup]="contactForm" (ngSubmit)="onSubmit()">
       <div class="mb-4">
