--- a/src/app/add-contact/add-contact.component.html
+++ b/src/app/add-contact/add-contact.component.html
@@ -75,9 +75,12 @@
         </div>
       </div>
     
-      <button type="submit" [disabled]="contactForm.invalid" class="w-full bg-blue-500 hover:bg-blue-700 text-white font-semibold py-2 px-4 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500">
+      <button *ngIf="!isLoading" type="submit" [disabled]="contactForm.invalid" class="w-full bg-blue-500 hover:bg-blue-700 text-white font-semibold py-2 px-4 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500">
         Submit
       </button>
+      <div class="flex justify-center">
+        <img *ngIf="isLoading" src="../../assets/spinner.gif" >
+      </div>
     </form>
     
   </div>
