--- a/src/app/auth-page/auth-page.component.html
+++ b/src/app/auth-page/auth-page.component.html
@@ -23,8 +23,8 @@
                 Password must be at least 6 characters
               </div>
             </div>
-            <button type="submit" class="w-full bg-indigo-600 text-white py-2 px-4 rounded-md hover:bg-indigo-700 focus:outline-none">
-              Login
+            <button [disabled]="isLoading" type="submit" class="w-full bg-indigo-600 text-white py-2 px-4 rounded-md hover:bg-indigo-700 focus:outline-none">
+                {{isLoading? 'Loading....':'Login'}}
             </button>
             
           </form>
@@ -35,7 +35,7 @@
       
       <form *ngIf="!isLogin" [formGroup]="registerForm" (ngSubmit)="onSubmitRegister()">
         <div class="mb-4">
-          <label for="registerName" class="block text-sm font-medium text-gray-700">Name</label>
+          <label for="registerName" class="block text-sm font-medium text-gray-700">Names</label>
           <input type="text" id="registerName" formControlName="name"
                  class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
           <div *ngIf="registerForm.get('name')?.invalid && registerForm.get('name')?.touched" class="text-red-600 text-sm">
@@ -51,6 +51,14 @@
           </div>
         </div>
         <div class="mb-4">
+            <label for="registerName" class="block text-sm font-medium text-gray-700">Phone Number</label>
+            <input type="number" id="phoneNumber" formControlName="phoneNumber"
+                   class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
+            <div *ngIf="registerForm.get('phoneNumber')?.invalid && registerForm.get('phoneNumber')?.touched" class="text-red-600 text-sm">
+                Phone Number is required
+            </div>
+          </div>
+        <div class="mb-4">
           <label for="registerPassword" class="block text-sm font-medium text-gray-700">Password</label>
           <input type="password" id="registerPassword" formControlName="password"
                  class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
@@ -58,8 +66,18 @@
             Password must be at least 6 characters
           </div>
         </div>
-        <button type="submit" class="w-full bg-indigo-600 text-white py-2 px-4 rounded-md hover:bg-indigo-700 focus:outline-none">
-            Register
+
+        <div class="mb-4">
+            <label for="registerPassword" class="block text-sm font-medium text-gray-700">Confirm Password</label>
+            <input type="password" id="registerconfirmPassword" formControlName="confirmPassword"
+                   class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
+            <div *ngIf="registerForm.get('confirmPassword')?.invalid && registerForm.get('confirmPassword')?.touched" class="text-red-600 text-sm">
+              Password must be at least 6 characters
+            </div>
+          </div>
+        <button [disabled]="isLoading" type="submit" class="w-full bg-indigo-600 text-white py-2 px-4 rounded-md hover:bg-indigo-700 focus:outline-none">
+            
+            {{isLoading? 'Loading....':'Register'}}
           </button>
         <p class="text-sm text-center mt-4">
             Have an account? <a  (click)="toggleForm()" class="text-indigo-600">Login</a>
