--- a/src/app/common/sidebar/sidebar.component.html
+++ b/src/app/common/sidebar/sidebar.component.html
@@ -1,11 +1,14 @@
 <div class="md:w-1/5 w-1/5 bg-gray-800 text-white h-screen fixed top-0 left-0 transform transition-transform duration-300 ease-in-out"
      [ngClass]="{'translate-x-0': sidebarVisible || !isMobile, '-translate-x-full': !sidebarVisible && isMobile}">
      <div class="p-3" >
+      <div class="bg-white rounded p-3 text-center d-flex mb-5" >
+        <img src="../../../assets/logo2.png" class="m-auto" width="100" alt="">
+      </div>
         <div>
-          <a routerLink="/dashboard" class="block py-2 px-4 rounded hover:bg-gray-700 text-white" *ngIf="!isMobile" >
+          <a routerLink="/dashboard/dashboard" class="block py-2 px-4 rounded hover:bg-gray-700 text-white" *ngIf="!isMobile" >
             Dashboard
           </a>
-          <a routerLink="/dashboard" class="block py-2 px-4 rounded hover:bg-gray-700 text-white " *ngIf="isMobile" >
+          <a routerLink="/dashboard/dashboard" class="block py-2 px-4 rounded hover:bg-gray-700 text-white " *ngIf="isMobile" >
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-speedometer2" viewBox="0 0 16 16">
               <path d="M8 4a.5.5 0 0 1 .5.5V6a.5.5 0 0 1-1 0V4.5A.5.5 0 0 1 8 4M3.732 5.732a.5.5 0 0 1 .707 0l.915.914a.5.5 0 1 1-.708.708l-.914-.915a.5.5 0 0 1 0-.707M2 10a.5.5 0 0 1 .5-.5h1.586a.5.5 0 0 1 0 1H2.5A.5.5 0 0 1 2 10m9.5 0a.5.5 0 0 1 .5-.5h1.5a.5.5 0 0 1 0 1H12a.5.5 0 0 1-.5-.5m.754-4.246a.39.39 0 0 0-.527-.02L7.547 9.31a.91.91 0 1 0 1.302 1.258l3.434-4.297a.39.39 0 0 0-.029-.518z"/>
               <path fill-rule="evenodd" d="M0 10a8 8 0 1 1 15.547 2.661c-.442 1.253-1.845 1.602-2.932 1.25C11.309 13.488 9.475 13 8 13c-1.474 0-3.31.488-4.615.911-1.087.352-2.49.003-2.932-1.25A8 8 0 0 1 0 10m8-7a7 7 0 0 0-6.603 9.329c.203.575.923.876 1.68.63C4.397 12.533 6.358 12 8 12s3.604.532 4.923.96c.757.245 1.477-.056 1.68-.631A7 7 0 0 0 8 3"/>
@@ -13,8 +16,26 @@
           </a>
         </div>
         <div>
-          <a routerLink="/add-contact" class="block py-2 px-4 rounded hover:bg-gray-700 text-white" *ngIf="!isMobile" >Add Contact</a>
-          <a routerLink="/add-contact" class="block py-2 px-4 rounded hover:bg-gray-700 text-white" *ngIf="isMobile" >
+          <a routerLink="/dashboard/add-contact" class="block py-2 px-4 rounded hover:bg-gray-700 text-white" *ngIf="!isMobile" >Users</a>
+          <a routerLink="/dashboard/add-contact" class="block py-2 px-4 rounded hover:bg-gray-700 text-white" *ngIf="isMobile" >
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-plus-fill" viewBox="0 0 16 16">
+              <path d="M1 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6"/>
+              <path fill-rule="evenodd" d="M13.5 5a.5.5 0 0 1 .5.5V7h1.5a.5.5 0 0 1 0 1H14v1.5a.5.5 0 0 1-1 0V8h-1.5a.5.5 0 0 1 0-1H13V5.5a.5.5 0 0 1 .5-.5"/>
+            </svg>
+          </a>
+        </div>
+        <div>
+          <a routerLink="/dashboard/product" class="block py-2 px-4 rounded hover:bg-gray-700 text-white" *ngIf="!isMobile" >Products</a>
+          <a routerLink="/dashboard/product" class="block py-2 px-4 rounded hover:bg-gray-700 text-white" *ngIf="isMobile" >
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-plus-fill" viewBox="0 0 16 16">
+              <path d="M1 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6"/>
+              <path fill-rule="evenodd" d="M13.5 5a.5.5 0 0 1 .5.5V7h1.5a.5.5 0 0 1 0 1H14v1.5a.5.5 0 0 1-1 0V8h-1.5a.5.5 0 0 1 0-1H13V5.5a.5.5 0 0 1 .5-.5"/>
+            </svg>
+          </a>
+        </div>
+        <div>
+          <a routerLink="/dashboard/add-contact" class="block py-2 px-4 rounded hover:bg-gray-700 text-white" *ngIf="!isMobile" >Users</a>
+          <a routerLink="/dashboard/add-contact" class="block py-2 px-4 rounded hover:bg-gray-700 text-white" *ngIf="isMobile" >
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-plus-fill" viewBox="0 0 16 16">
               <path d="M1 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6"/>
               <path fill-rule="evenodd" d="M13.5 5a.5.5 0 0 1 .5.5V7h1.5a.5.5 0 0 1 0 1H14v1.5a.5.5 0 0 1-1 0V8h-1.5a.5.5 0 0 1 0-1H13V5.5a.5.5 0 0 1 .5-.5"/>
