--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,34 +1,99 @@
 <div class="overflow-x-auto">
-    <div class="min-w-full">
+  <div
+    class="min-w-full flex flex-col md:flex-col lg:flex-row items-center justify-center justify-between"
+  >
+    <div class="lg:p-2 m-2 w-full lg:basis-1/2">
+      <div class="flex justify-between">
+        <h3>Products</h3>
+        <a>See More</a>
+      </div>
       <table class="min-w-full divide-y divide-gray-200">
         <thead class="bg-gray-800 text-white">
           <tr>
-            <th class="px-2 py-3 text-left text-xs font-medium uppercase tracking-wider sm:px-6">Name</th>
-            <th class="px-2 py-3 text-left text-xs font-medium uppercase tracking-wider sm:px-6">Email</th>
-            <th class="px-2 py-3 text-left text-xs font-medium uppercase tracking-wider sm:px-6">Phone Number</th>
-            <th class="px-2 py-3 text-left text-xs font-medium uppercase tracking-wider sm:px-6">Address</th>
-            <th class="px-2 py-3 text-left text-xs font-medium uppercase tracking-wider sm:px-6">Longitude</th>
-            <th class="px-2 py-3 text-left text-xs font-medium uppercase tracking-wider sm:px-6">Latitude</th>
+            <th
+              class="px-2 py-3 text-left text-xs font-medium uppercase tracking-wider sm:px-6"
+            >
+              Product Name
+            </th>
+            <th
+              class="px-2 py-3 text-left text-xs font-medium uppercase tracking-wider sm:px-6"
+            >
+              Product Price
+            </th>
+            <th
+              class="px-2 py-3 text-left text-xs font-medium uppercase tracking-wider sm:px-6"
+            >
+              Availability
+            </th>
+            <th
+              class="px-2 py-3 text-left text-xs font-medium uppercase tracking-wider sm:px-6"
+            >
+              Action
+            </th>
           </tr>
         </thead>
         <tbody class="bg-white divide-y divide-gray-200">
-          <tr *ngFor="let details of storedData">
-            <td class="px-2 py-4 whitespace-nowrap sm:px-6">{{ details.name }}</td>
-            <td class="px-2 py-4 whitespace-nowrap sm:px-6">{{ details.email }}</td>
-            <td class="px-2 py-4 whitespace-nowrap sm:px-6">{{ details.phoneNumber }}</td>
-            <td class="px-2 py-4 whitespace-nowrap sm:px-6">{{ details.addresses[0] }}</td>
-            <td class="px-2 py-4 whitespace-nowrap sm:px-6">{{ details.longitude }}</td>
-            <td class="px-2 py-4 whitespace-nowrap sm:px-6">{{ details.latitude }}</td>
+          <tr *ngFor="let product of productList">
+            <td class="px-2 py-4 whitespace-nowrap sm:px-6">
+              {{ product?.location?.address }}
+            </td>
+            <td class="px-2 py-4 whitespace-nowrap sm:px-6">
+              {{ product?.totalPrice }}
+            </td>
+            <td class="px-2 py-4 whitespace-nowrap sm:px-6">
+              {{ product?.isAvailable }}
+            </td>
+            <td class="px-2 py-4 whitespace-nowrap sm:px-6">VIEW</td>
           </tr>
         </tbody>
       </table>
     </div>
-</div>
 
-<div *ngIf="!storedData.length" class="flex" >
-    <div class="m-auto items-center h-screen mt-10">
-        <div class="h3 text-center" >It is a ghost town here! Proceed to add your contacts.</div>
-        <p class="text-center" ><a routerLink="/add-contact" class="text-center" >Add Contact</a></p>
+    <div class="lg:p-2 m-2 w-full lg:basis-1/2">
+      <div class="flex justify-between">
+        <h3>Products</h3>
+        <a>See More</a>
+      </div>
+      <table class="min-w-full divide-y divide-gray-200">
+        <thead class="bg-gray-800 text-white">
+          <tr>
+            <th
+              class="px-2 py-3 text-left text-xs font-medium uppercase tracking-wider sm:px-6"
+            >
+              Product Name
+            </th>
+            <th
+              class="px-2 py-3 text-left text-xs font-medium uppercase tracking-wider sm:px-6"
+            >
+              Product Price
+            </th>
+            <th
+              class="px-2 py-3 text-left text-xs font-medium uppercase tracking-wider sm:px-6"
+            >
+              Availability
+            </th>
+            <th
+              class="px-2 py-3 text-left text-xs font-medium uppercase tracking-wider sm:px-6"
+            >
+              Action
+            </th>
+          </tr>
+        </thead>
+        <tbody class="bg-white divide-y divide-gray-200">
+          <tr *ngFor="let product of productList">
+            <td class="px-2 py-4 whitespace-nowrap sm:px-6">
+              {{ product?.location?.address }}
+            </td>
+            <td class="px-2 py-4 whitespace-nowrap sm:px-6">
+              {{ product?.totalPrice }}
+            </td>
+            <td class="px-2 py-4 whitespace-nowrap sm:px-6">
+              {{ product?.isAvailable }}
+            </td>
+            <td class="px-2 py-4 whitespace-nowrap sm:px-6">VIEW</td>
+          </tr>
+        </tbody>
+      </table>
     </div>
+  </div>
 </div>
-  
