--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -5,7 +5,7 @@
     </div>
     <div class="content flex-grow p-4 ml-0 md:w-4/5 w-4/5">
       <h1 class="text-2xl font-bold">Dashboard</h1>
-      <div class="mt-4 md:ml-4/5">
+      <div class="mt-4 md:ml-4/5 bg-slate-100 rounded h-auto">
         <router-outlet></router-outlet>
       </div>
     </div>
