--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -25,11 +25,11 @@
             >
               Availability
             </th>
-            <th
+            <!-- <th
               class="px-2 py-3 text-left text-xs font-medium uppercase tracking-wider sm:px-6"
             >
               Action
-            </th>
+            </th> -->
           </tr>
         </thead>
         <tbody class="bg-white divide-y divide-gray-200">
@@ -43,7 +43,7 @@
             <td class="px-2 py-4 whitespace-nowrap sm:px-6">
               {{ product?.isAvailable }}
             </td>
-            <td class="px-2 py-4 whitespace-nowrap sm:px-6">VIEW</td>
+            <!-- <td class="px-2 py-4 whitespace-nowrap sm:px-6">VIEW</td> -->
           </tr>
         </tbody>
       </table>
@@ -51,7 +51,7 @@
 
     <div class="lg:p-2 m-2 w-full lg:basis-1/2">
       <div class="flex justify-between">
-        <h3>Products</h3>
+        <h3>Users</h3>
         <a>See More</a>
       </div>
       <table class="min-w-full divide-y divide-gray-200">
@@ -60,37 +60,32 @@
             <th
               class="px-2 py-3 text-left text-xs font-medium uppercase tracking-wider sm:px-6"
             >
-              Product Name
+               Names
             </th>
             <th
               class="px-2 py-3 text-left text-xs font-medium uppercase tracking-wider sm:px-6"
             >
-              Product Price
+              Phone Number 
             </th>
             <th
               class="px-2 py-3 text-left text-xs font-medium uppercase tracking-wider sm:px-6"
             >
-              Availability
+              Email
             </th>
-            <th
-              class="px-2 py-3 text-left text-xs font-medium uppercase tracking-wider sm:px-6"
-            >
-              Action
-            </th>
+            
           </tr>
         </thead>
         <tbody class="bg-white divide-y divide-gray-200">
-          <tr *ngFor="let product of productList">
+          <tr *ngFor="let user of userList">
             <td class="px-2 py-4 whitespace-nowrap sm:px-6">
-              {{ product?.location?.address }}
+              {{ user?.fullName }}
             </td>
             <td class="px-2 py-4 whitespace-nowrap sm:px-6">
-              {{ product?.totalPrice }}
+              {{ user?.phoneNumber }}
             </td>
             <td class="px-2 py-4 whitespace-nowrap sm:px-6">
-              {{ product?.isAvailable }}
+              {{ user?.email }}
             </td>
-            <td class="px-2 py-4 whitespace-nowrap sm:px-6">VIEW</td>
           </tr>
         </tbody>
       </table>
