--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -3,9 +3,14 @@
     class="min-w-full flex flex-col md:flex-col lg:flex-row items-center justify-center justify-between"
   >
     <div class="lg:p-2 m-2 w-full lg:basis-1/2">
-      <div class="flex justify-between">
+      <div class="flex justify-between mb-2">
         <h3>Products</h3>
-        <a>See More</a>
+        <div class="flex text-purple-900">
+          <a class="text-purple-900 text-xs" >See More</a>&nbsp;
+          <!-- <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right-circle" viewBox="0 0 16 16">
+            <path fill-rule="evenodd" d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8m15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0M4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5z"/>
+          </svg> -->
+        </div>
       </div>
       <table class="min-w-full divide-y divide-gray-200">
         <thead class="bg-gray-800 text-white">
@@ -50,9 +55,14 @@
     </div>
 
     <div class="lg:p-2 m-2 w-full lg:basis-1/2">
-      <div class="flex justify-between">
+      <div class="flex justify-between mb-2">
         <h3>Users</h3>
-        <a>See More</a>
+        <div class="flex text-purple-900">
+          <span class="text-purple-900 text-xs" >See More</span>&nbsp;
+          <!-- <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right-circle font-xs" viewBox="0 0 16 16">
+            <path fill-rule="evenodd" d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8m15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0M4.5 7.5a.5.5 0 0 0 0 1h5.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5z"/>
+          </svg> -->
+        </div>
       </div>
       <table class="min-w-full divide-y divide-gray-200">
         <thead class="bg-gray-800 text-white">
