--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -4,8 +4,13 @@
       <app-sidebar></app-sidebar>
     </div>
     <div class="content flex-grow p-4 ml-0 md:w-4/5 w-4/5">
-      <h1 class="text-2xl font-bold">Dashboard</h1>
-      <div class="mt-4 md:ml-4/5 bg-slate-100 rounded h-auto">
+      <!-- <h1 class="text-2xl font-bold">ZeroPay Dashboard</h1> -->
+      <div class="p-3 bg-slate-200 shadow-sm rounded-lg " >
+        <div class="font-medium text-purple-900 font-mono">
+          ZeroPay Dashboard
+        </div>
+      </div>
+      <div class="mt-4 md:ml-4/5 bg-slate-100 rounded-lg h-auto font-mono">
         <router-outlet></router-outlet>
       </div>
     </div>
