--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -10,7 +10,7 @@
           ZeroPay Dashboard
         </div>
       </div>
-      <div class="mt-4 md:ml-4/5 bg-slate-100 rounded-lg h-auto font-mono">
+      <div class="mt-4 md:ml-4/5 bg-slate-100 rounded-lg min-h-screen p-3 font-mono">
         <router-outlet></router-outlet>
       </div>
     </div>
