--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -222,6 +222,8 @@
                     </tbody>
                 </table>
             </div>
+
+            <button class="bg-red-500 px-5 mt-5 py-2 rounded shadow text-white text-xs" (click)="blockUser()" >Block User</button>
         </div>
     
     </ng-container>
